# AnimatedBusInfoBoard

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shell.nix
.github/workflows/: ci.yml
data/: config.ini  stops.csv
